Fixed left aligned title issues

--- a/src/main/webapp/assets/styles/mixins/bsp-list-promo.less
+++ b/src/main/webapp/assets/styles/mixins/bsp-list-promo.less
@@ -29,8 +29,16 @@
 		width: @size;
 	}
 
+	.bsp-list-promo-list {
+		margin-top: 0 !important; // overriding parent specificity
+	}
+
 	.bsp-list-promo-text {
 		width: (100%-@size);
+	}
+
+	.bsp-list-promo-title {
+		margin-top: 0;
 	}
 }
 
